--- a/index.html
+++ b/index.html
@@ -404,17 +404,15 @@
         <div class="founder-note">
             <p><b>I was called "Iron Pimples" in secondary school.</b></p>
             <br>
-            <p>For years, acne controlled everything,from the mirrors I avoided, the confidence I lost,  to the bullying I endured.</p>
-            <br>
-            <p>My mom made me try toothpaste masks and medication I was too young to take. Ofcourse, nothing worked.</p>
+            <p>For years, acne controlled everything,from the mirrors I avoided, the confidence I lost,to the bullying I endured.My mom even made me try toothpaste masks and medication I was too young to take. Ofcourse, nothing worked.</p>
 <br>
-            <p>Then I discovered something that changed everything: over 85% of people struggle with acne, yet we all suffer in silence, thinking we're alone. That's why I built Chael Collective—which is not just another skincare brand or a random tiktoker telling you what to do or what not to do for your acne, but a community where people like us heal more than our skin. We share real solutions, understand our triggers, rebuild our confidence, and prove that acne doesn't define us. Because you don't need another miracle product. You need people who actually get it.</p>
+            <p>Then I discovered something that changed everything: over 85% of people struggle with acne, yet we all suffer in silence, thinking we're alone. That's why I built Chael Collective; which is not just a skincare brand or a random tiktoker telling you what to do or what not to do for your acne, but a community where people like us heal more than our skin. We share real solutions, understand our triggers, rebuild our confidence, and prove that acne doesn't define us. Because you don't need another miracle product. You need people who actually get it.</p>
 
 <br>
 <p><b>Welcome home.</b></p>
 
 
-            <p class="Rae Idoko">— Founder, CHAELCollective</p>
+            <p class="Rae Idoko">Rae Idoko— Founder, CHAELCollective</p>
         </div>
 
         <!-- Vision & Mission -->
@@ -425,7 +423,7 @@
             </div>
             <div class="vm-card">
                 <h3>Our Mission</h3>
-                <p>To build a revolutionary community that educates, supports, and empowers individuals through their acne journey—connecting them with experts, resources, and each other to transform skin health and mental wellbeing.</p>
+                <p>To build a revolutionary community that educates, supports, and empowers individuals through their acne journey,connecting them with experts, resources, and each other to transform skin health and mental wellbeing.</p>
             </div>
         </div>
     </section>
